--- a/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/AndroidManifest.xml
+++ b/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:screenOrientation="portrait"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
