--- a/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/AndroidManifest.xml
+++ b/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".SetupActivity"
+            android:screenOrientation="portrait" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
 </manifest>
